--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "bin": {
     "tablemint": "index.js"
   },
+  "files": [
+    "index.js",
+    "commands/",
+    "utils/",
+    "config/",
+    "README.md"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
